# nomic-tools

./: .gitignore  Cargo.toml  \  ]  ]:ls  build.txt  commands  saved_shit.rs  stuff.rs  test5.txt
src/: balance.rs  calc.rs  cli.rs  commands.rs  delegate.rs  functions.rs  globals.rs  journal.rs  lib.rs  log.rs  main.rs  main.rs.1  main.rs.hexfiletoaddress  main.rs.test  main.rsbackup2  main_balance.rs  nomic_commands.rs  subcommand.rs
src/cli/: address.rs  balance.rs  convert.rs.test  delegations.rs  import.rs  mod.rs  nonce.rs  profiles.rs  validators.rs
src/cli_old/: autostake.rs  convert.rs  convert.rs.1  key.rs
src/commands/: mod.rs  validators.rs
src/global/: cli.rs  config.rs  mod.rs
src/handlers/: convert.rs  import.rs  key.rs  mod.rs  nonce.rs  profiles.rs  validators.rs
src/journal/: cli.rs  journal.rs  journalctl.rs  mod.rs
src/journald/: log.rs
src/key/: cli.rs  key.rs  mod.rs  old_cli.rs  old_privkey.rs  privkey.rs  util.rs
src/nomic/: address.rs  balance.rs  calc.rs  commands.rs  convert.rs  delegations.rs  ftable.rs  globals.rs  key.rs  mod.rs  nonce.bak.rs  nonce.rs  privkey.rs  profile.rs  profiles.rs  profiles.rs.old  validators.rs  validators.rsold
src/nonce/: cli.rs  mod.rs  nonce.rs  old_cli.rs
src/old_nomic/: calc.rs  func.rs  functions.rs  mod.rs
src/privkey/: cli.rs  key.rs  mod.rs
src/profiles/: balance.rs  cli.rs  collection.rs  config.rs  delegate.rs  delegations.rs  journal.rs  lib.rs  mod.rs  old_cli.rs  old_config.rs  old_profile.rs  profile.rs  stats.rs  util.rs
src/tools/: mod.rs  (+1 more)
tools/: columnizer.rs  mod.rs
(+36 files in other folders)
