[package]
name = "nomic-tools"
version = "0.1.0"
edition = "2021"

[workspace]
#members = [
#    "../columnizer",
#]

[dependencies]
clap = "4.5.18"
fmt = { git = "https://github.com/flengure/fmt.git", branch = "main" }
cosmrs = "0.20.0"
hex = "0.4.3"
indexmap = { version = "2.5.0", features = ["serde"] }
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dirs = "5.0.1"
anyhow = "1.0.89"
eyre = "0.6.12"
once_cell = "1.20.1"
